--- a/benchmark/build.gradle
+++ b/benchmark/build.gradle
@@ -13,7 +13,8 @@ dependencies {
 }
 
 jmh {
-    //jvmArgsAppend = ["-XX:+UseSuperWord"]
+    duplicateClassesStrategy = 'warn'
+    jvmArgs = ["-Xms1024M", "-Xmx8092m", "-XX:+UseSuperWord"]
 }
 
 idea {
