--- a/benchmark/build.gradle
+++ b/benchmark/build.gradle
@@ -13,6 +13,8 @@ dependencies {
 }
 
 jmh {
+    // regExp which benchmarks to run
+    include = ['.*']
     duplicateClassesStrategy = 'warn'
     jvmArgs = ["-Xms1024M", "-Xmx8092m", "-XX:+UseSuperWord"]
 }
